--- a/template/Account/login.html
+++ b/template/Account/login.html
@@ -40,14 +40,16 @@
   <body>
     <div class="login-box">
       <h2 class="form-title">Welcome Back</h2>
-      <form>
+      <form method="POST" >
+        {% csrf_token %}
         <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
+          <label for="email" class="form-label">Email or Username</label>
           <input
-            type="email"
+            type="text"
+            name="identifier"
             class="form-control"
             id="email"
-            placeholder="you@example.com"
+            placeholder="Enter your email or username"
             required
           />
         </div>
@@ -56,29 +58,30 @@
           <label for="password" class="form-label">Password</label>
           <input
             type="password"
+            name="password"
             class="form-control"
             id="password"
             placeholder="Enter your password"
             required
           />
         </div>
-
-        <div class="d-flex justify-content-between align-items-center mb-3">
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="remember" />
-            <label class="form-check-label" for="remember">Remember me</label>
-          </div>
-          <a href="#" class="text-decoration-none">Forgot password?</a>
-        </div>
-
         <button type="submit" class="btn btn-linkedin w-100">Sign In</button>
       </form>
 
       <hr class="my-4" />
-
-      <p class="text-center">New to LinkedIn? <a href="#">Join now</a></p>
+      <div class="text-center">
+        <p class="mb-0">Don't have an account?</p>
+        <a href="{% url 'register'%}" class="btn btn-outline-secondary w-100 mt-2">
+          Create Account
+        </a>
     </div>
-
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-info mt-3" role="alert">
+      {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
