authentication full  complete

--- a/template/Account/login.html
+++ b/template/Account/login.html
@@ -67,7 +67,11 @@
         </div>
         <button type="submit" class="btn btn-linkedin w-100">Sign In</button>
       </form>
-
+      <div class="text-center mt-3">
+        <a href="{% url 'forget_email' %}" class="text-decoration-none">
+          Forgot Password?
+        </a>
+      </div>
       <hr class="my-4" />
       <div class="text-center">
         <p class="mb-0">Don't have an account?</p>
